fixed horizontal scroll

--- a/blocks/news-article-carousel/news-article-carousel.css
+++ b/blocks/news-article-carousel/news-article-carousel.css
@@ -1,14 +1,29 @@
 main .carousel-wrapper.news-article-carousel-wrapper {
   width: 1170px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 80px;
+  padding-right: 80px;
   margin: 0 auto;
   padding-top: 3rem;
 }
 
 main .carousel.news-article-carousel {
-  width: 88%;
+  width: 100%;
   padding: 0;
+  display: flex;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.carousel.news-article-carousel::-webkit-scrollbar {
+  display: none;
+}
+
+.carousel.news-article-carousel .carousel-item {
+  flex: 0 0 100%;
+  scroll-snap-align: start;
 }
 
 main .carousel.news-article-carousel .carousel-item {
@@ -25,6 +40,8 @@ main .carousel.news-article-carousel .card-caption h3 {
 @media only screen and (max-width: 1199px) {
   main .carousel-wrapper.news-article-carousel-wrapper {
     width: 940px;
+    padding-left: 80px;
+    padding-right: 80px;
   }
 }
 
